decafAlejandroParser.py
# Generated from decafAlejandro.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class decafAlejandroParser ( Parser ):

    grammarFileName = "decafAlejandro.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'Program'", "'if'", "'else'", 
                     "'for'", "'while'", "'return'", "'break'", "'continue'", 
                     "'boolean'", "'char'", "'int'", "'string'", "'True'", 
                     "'False'", "'void'", "'struct'", "'callout'", "';'", 
                     "'{'", "'}'", "'['", "']'", "'('", "')'", "','", "'\"'", 
                     "'''", "'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", 
                     "'!'", "'>'", "'<'", "'>='", "'<='", "'='", "'+='", 
                     "'-='", "'=='", "'!='", "'.'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "PROGRAM", "IF", "ELSE", "FOR", 
                      "WHILE", "RETURN", "BREAK", "CONTINUE", "BOOLEAN", 
                      "CHAR", "INT", "STRING", "TRUE", "FALSE", "VOID", 
                      "STRUCT", "CALLOUT", "SEMICOLON", "LCURLY", "RCURLY", 
                      "LSQUARE", "RSQUARE", "LROUND", "RROUND", "COMMA", 
                      "QUOTES", "APOSTROPHE", "ADD", "SUB", "MULTIPLY", 
                      "DIVIDE", "REMINDER", "AND", "OR", "NOT", "GREATER_OP", 
                      "LESS_OP", "GREATER_eq_op", "LESS_eq_op", "EQUAL_OP", 
                      "ADD_eq_op", "SUB_eq_op", "EQUALITY_OP", "UNEQUALITY_OP", 
                      "POINT", "ID", "ALPHA", "CHAR_LITERAL", "DECIMAL_LITERAL", 
                      "DIGIT", "HEX_LITERAL", "BOOL_LITERAL", "STRING_LITERAL", 
                      "ALPHA_NUM", "HEX_DIGIT", "LINE_COMMENT", "COMMENT", 
                      "NEWLINE", "WHITESPACE" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_vardeclr = 2
    RULE_field_declr = 3
    RULE_array_id = 4
    RULE_field_var = 5
    RULE_var_id = 6
    RULE_struct_declr = 7
    RULE_method_declr = 8
    RULE_return_type = 9
    RULE_block = 10
    RULE_statement = 11
    RULE_method_call_inter = 12
    RULE_method_call = 13
    RULE_expr = 14
    RULE_location = 15
    RULE_callout_arg = 16
    RULE_int_literal = 17
    RULE_rel_op = 18
    RULE_eq_op = 19
    RULE_cond_op = 20
    RULE_literal = 21
    RULE_bin_op = 22
    RULE_arith_op = 23
    RULE_var_type = 24
    RULE_assign_op = 25
    RULE_method_name = 26

    ruleNames =  [ "program", "declaration", "vardeclr", "field_declr", 
                   "array_id", "field_var", "var_id", "struct_declr", "method_declr", 
                   "return_type", "block", "statement", "method_call_inter", 
                   "method_call", "expr", "location", "callout_arg", "int_literal", 
                   "rel_op", "eq_op", "cond_op", "literal", "bin_op", "arith_op", 
                   "var_type", "assign_op", "method_name" ]

    EOF = Token.EOF
    CLASS=1
    PROGRAM=2
    IF=3
    ELSE=4
    FOR=5
    WHILE=6
    RETURN=7
    BREAK=8
    CONTINUE=9
    BOOLEAN=10
    CHAR=11
    INT=12
    STRING=13
    TRUE=14
    FALSE=15
    VOID=16
    STRUCT=17
    CALLOUT=18
    SEMICOLON=19
    LCURLY=20
    RCURLY=21
    LSQUARE=22
    RSQUARE=23
    LROUND=24
    RROUND=25
    COMMA=26
    QUOTES=27
    APOSTROPHE=28
    ADD=29
    SUB=30
    MULTIPLY=31
    DIVIDE=32
    REMINDER=33
    AND=34
    OR=35
    NOT=36
    GREATER_OP=37
    LESS_OP=38
    GREATER_eq_op=39
    LESS_eq_op=40
    EQUAL_OP=41
    ADD_eq_op=42
    SUB_eq_op=43
    EQUALITY_OP=44
    UNEQUALITY_OP=45
    POINT=46
    ID=47
    ALPHA=48
    CHAR_LITERAL=49
    DECIMAL_LITERAL=50
    DIGIT=51
    HEX_LITERAL=52
    BOOL_LITERAL=53
    STRING_LITERAL=54
    ALPHA_NUM=55
    HEX_DIGIT=56
    LINE_COMMENT=57
    COMMENT=58
    NEWLINE=59
    WHITESPACE=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(decafAlejandroParser.CLASS, 0)

        def PROGRAM(self):
            return self.getToken(decafAlejandroParser.PROGRAM, 0)

        def LCURLY(self):
            return self.getToken(decafAlejandroParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(decafAlejandroParser.RCURLY, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(decafAlejandroParser.DeclarationContext,i)


        def getRuleIndex(self):
            return decafAlejandroParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = decafAlejandroParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(decafAlejandroParser.CLASS)
            self.state = 55
            self.match(decafAlejandroParser.PROGRAM)
            self.state = 56
            self.match(decafAlejandroParser.LCURLY)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafAlejandroParser.BOOLEAN) | (1 << decafAlejandroParser.INT) | (1 << decafAlejandroParser.STRING) | (1 << decafAlejandroParser.VOID) | (1 << decafAlejandroParser.STRUCT))) != 0):
                self.state = 57
                self.declaration()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(decafAlejandroParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_declr(self):
            return self.getTypedRuleContext(decafAlejandroParser.Struct_declrContext,0)


        def vardeclr(self):
            return self.getTypedRuleContext(decafAlejandroParser.VardeclrContext,0)


        def method_declr(self):
            return self.getTypedRuleContext(decafAlejandroParser.Method_declrContext,0)


        def field_declr(self):
            return self.getTypedRuleContext(decafAlejandroParser.Field_declrContext,0)


        def getRuleIndex(self):
            return decafAlejandroParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = decafAlejandroParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.struct_declr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.vardeclr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.method_declr()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.field_declr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(decafAlejandroParser.SEMICOLON, 0)

        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroParser.Var_typeContext)
            else:
                return self.getTypedRuleContext(decafAlejandroParser.Var_typeContext,i)


        def field_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroParser.Field_varContext)
            else:
                return self.getTypedRuleContext(decafAlejandroParser.Field_varContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(decafAlejandroParser.COMMA)
            else:
                return self.getToken(decafAlejandroParser.COMMA, i)

        def getRuleIndex(self):
            return decafAlejandroParser.RULE_vardeclr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardeclr" ):
                listener.enterVardeclr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardeclr" ):
                listener.exitVardeclr(self)




    def vardeclr(self):

        localctx = decafAlejandroParser.VardeclrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardeclr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.var_type()
            self.state = 72
            self.field_var()
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==decafAlejandroParser.COMMA:
                self.state = 74
                self.match(decafAlejandroParser.COMMA)
                self.state = 75
                self.var_type()
                self.state = 76
                self.field_var()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            self.match(decafAlejandroParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(decafAlejandroParser.Var_typeContext,0)


        def field_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroParser.Field_varContext)
            else:
                return self.getTypedRuleContext(decafAlejandroParser.Field_varContext,i)


        def SEMICOLON(self):
            return self.getToken(decafAlejandroParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(decafAlejandroParser.COMMA)
            else:
                return self.getToken(decafAlejandroParser.COMMA, i)

        def getRuleIndex(self):
            return decafAlejandroParser.RULE_field_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_declr" ):
                listener.enterField_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_declr" ):
                listener.exitField_declr(self)




    def field_declr(self):

        localctx = decafAlejandroParser.Field_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_field_declr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.var_type()
            self.state = 86
            self.field_var()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==decafAlejandroParser.COMMA:
                self.state = 87
                self.match(decafAlejandroParser.COMMA)
                self.state = 88
                self.field_var()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(decafAlejandroParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(decafAlejandroParser.ID, 0)

        def LSQUARE(self):
            return self.getToken(decafAlejandroParser.LSQUARE, 0)

        def expr(self):
            return self.getTypedRuleContext(decafAlejandroParser.ExprContext,0)


        def RSQUARE(self):
            return self.getToken(decafAlejandroParser.RSQUARE, 0)

        def POINT(self):
            return self.getToken(decafAlejandroParser.POINT, 0)

        def location(self):
            return self.getTypedRuleContext(decafAlejandroParser.LocationContext,0)


        def getRuleIndex(self):
            return decafAlejandroParser.RULE_array_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_id" ):
                listener.enterArray_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_id" ):
                listener.exitArray_id(self)




    def array_id(self):

        localctx = decafAlejandroParser.Array_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_array_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(decafAlejandroParser.ID)
            self.state = 97
            self.match(decafAlejandroParser.LSQUARE)
            self.state = 98
            self.expr(0)
            self.state = 99
            self.match(decafAlejandroParser.RSQUARE)
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 100
                self.match(decafAlejandroParser.POINT)
                self.state = 101
                self.location()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_id(self):
            return self.getTypedRuleContext(decafAlejandroParser.Var_idContext,0)


        def array_id(self):
            return self.getTypedRuleContext(decafAlejandroParser.Array_idContext,0)


        def getRuleIndex(self):
            return decafAlejandroParser.RULE_field_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_var" ):
                listener.enterField_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_var" ):
                listener.exitField_var(self)




    def field_var(self):

        localctx = decafAlejandroParser.Field_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_field_var)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.var_id()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.array_id()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(decafAlejandroParser.ID, 0)

        def POINT(self):
            return self.getToken(decafAlejandroParser.POINT, 0)

        def location(self):
            return self.getTypedRuleContext(decafAlejandroParser.LocationContext,0)


        def getRuleIndex(self):
            return decafAlejandroParser.RULE_var_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_id" ):
                listener.enterVar_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_id" ):
                listener.exitVar_id(self)




    def var_id(self):

        localctx = decafAlejandroParser.Var_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(decafAlejandroParser.ID)
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 109
                self.match(decafAlejandroParser.POINT)
                self.state = 110
                self.location()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_declrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(decafAlejandroParser.STRUCT, 0)

        def ID(self):
            return self.getToken(decafAlejandroParser.ID, 0)

        def LCURLY(self):
            return self.getToken(decafAlejandroParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(decafAlejandroParser.RCURLY, 0)

        def SEMICOLON(self):
            return self.getToken(decafAlejandroParser.SEMICOLON, 0)

        def vardeclr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroParser.VardeclrContext)
            else:
                return self.getTypedRuleContext(decafAlejandroParser.VardeclrContext,i)


        def getRuleIndex(self):
            return decafAlejandroParser.RULE_struct_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_declr" ):
                listener.enterStruct_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_declr" ):
                listener.exitStruct_declr(self)




    def struct_declr(self):

        localctx = decafAlejandroParser.Struct_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_struct_declr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(decafAlejandroParser.STRUCT)
            self.state = 114
            self.match(decafAlejandroParser.ID)
            self.state = 115
            self.match(decafAlejandroParser.LCURLY)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafAlejandroParser.BOOLEAN) | (1 << decafAlejandroParser.INT) | (1 << decafAlejandroParser.STRING) | (1 << decafAlejandroParser.STRUCT))) != 0):
                self.state = 116
                self.vardeclr()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(decafAlejandroParser.RCURLY)
            self.state = 123
            self.match(decafAlejandroParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_type(self):
            return self.getTypedRuleContext(decafAlejandroParser.Return_typeContext,0)


        def method_name(self):
            return self.getTypedRuleContext(decafAlejandroParser.Method_nameContext,0)


        def LROUND(self):
            return self.getToken(decafAlejandroParser.LROUND, 0)

        def RROUND(self):
            return self.getToken(decafAlejandroParser.RROUND, 0)

        def block(self):
            return self.getTypedRuleContext(decafAlejandroParser.BlockContext,0)


        def VOID(self):
            return self.getToken(decafAlejandroParser.VOID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(decafAlejandroParser.COMMA)
            else:
                return self.getToken(decafAlejandroParser.COMMA, i)

        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroParser.Var_typeContext)
            else:
                return self.getTypedRuleContext(decafAlejandroParser.Var_typeContext,i)


        def var_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroParser.Var_idContext)
            else:
                return self.getTypedRuleContext(decafAlejandroParser.Var_idContext,i)


        def getRuleIndex(self):
            return decafAlejandroParser.RULE_method_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_declr" ):
                listener.enterMethod_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_declr" ):
                listener.exitMethod_declr(self)




    def method_declr(self):

        localctx = decafAlejandroParser.Method_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_method_declr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.return_type()
            self.state = 126
            self.method_name()
            self.state = 127
            self.match(decafAlejandroParser.LROUND)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafAlejandroParser.BOOLEAN) | (1 << decafAlejandroParser.INT) | (1 << decafAlejandroParser.STRING) | (1 << decafAlejandroParser.VOID) | (1 << decafAlejandroParser.STRUCT))) != 0):
                self.state = 132
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [decafAlejandroParser.BOOLEAN, decafAlejandroParser.INT, decafAlejandroParser.STRING, decafAlejandroParser.STRUCT]:
                    self.state = 128
                    self.var_type()
                    self.state = 129
                    self.var_id()
                    pass
                elif token in [decafAlejandroParser.VOID]:
                    self.state = 131
                    self.match(decafAlejandroParser.VOID)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==decafAlejandroParser.COMMA:
                    self.state = 134
                    self.match(decafAlejandroParser.COMMA)
                    self.state = 135
                    self.var_type()
                    self.state = 136
                    self.var_id()
                    self.state = 142
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 145
            self.match(decafAlejandroParser.RROUND)
            self.state = 146
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(decafAlejandroParser.Var_typeContext,0)


        def VOID(self):
            return self.getToken(decafAlejandroParser.VOID, 0)

        def getRuleIndex(self):
            return decafAlejandroParser.RULE_return_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_type" ):
                listener.enterReturn_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_type" ):
                listener.exitReturn_type(self)




    def return_type(self):

        localctx = decafAlejandroParser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_return_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [decafAlejandroParser.BOOLEAN, decafAlejandroParser.INT, decafAlejandroParser.STRING, decafAlejandroParser.STRUCT]:
                self.state = 148
                self.var_type()
                pass
            elif token in [decafAlejandroParser.VOID]:
                self.state = 149
                self.match(decafAlejandroParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(decafAlejandroParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(decafAlejandroParser.RCURLY, 0)

        def vardeclr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroParser.VardeclrContext)
            else:
                return self.getTypedRuleContext(decafAlejandroParser.VardeclrContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroParser.StatementContext)
            else:
                return self.getTypedRuleContext(decafAlejandroParser.StatementContext,i)


        def getRuleIndex(self):
            return decafAlejandroParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = decafAlejandroParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(decafAlejandroParser.LCURLY)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafAlejandroParser.BOOLEAN) | (1 << decafAlejandroParser.INT) | (1 << decafAlejandroParser.STRING) | (1 << decafAlejandroParser.STRUCT))) != 0):
                self.state = 153
                self.vardeclr()
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafAlejandroParser.IF) | (1 << decafAlejandroParser.FOR) | (1 << decafAlejandroParser.WHILE) | (1 << decafAlejandroParser.RETURN) | (1 << decafAlejandroParser.BREAK) | (1 << decafAlejandroParser.CALLOUT) | (1 << decafAlejandroParser.ID))) != 0):
                self.state = 159
                self.statement()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 165
            self.match(decafAlejandroParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

